--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.6.3",
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
@@ -24,6 +24,10 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
-        "admin-lte": "^3.0.0-alpha.2"
+        "admin-lte": "^3.0.0-alpha.2",
+        "sweetalert2": "^7.33.1",
+        "vform": "^1.0.0",
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.0.2"
     }
 }
