--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.5.21"
+        "vue-template-compiler": "^2.5.21",
+        "webpack": "^4.30.0"
     },
     "dependencies": {
         "admin-lte": "^3.0.0-alpha.2",
@@ -29,6 +30,7 @@
         "sweetalert2": "^7.33.1",
         "vform": "^1.0.0",
         "vue-progressbar": "^0.7.5",
-        "vue-router": "^3.0.2"
+        "vue-router": "^3.0.2",
+        "vue2-google-maps": "^0.10.6"
     }
 }
