--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "webpack": "^4.30.0"
     },
     "dependencies": {
+        "@google/markerclusterer": "^1.0.3",
         "admin-lte": "^3.0.0-alpha.2",
         "laravel-vue-pagination": "^2.3.0",
         "sweetalert2": "^7.33.1",
