--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.0",
+        "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
