--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "axios": "^0.18.0",
         "bootstrap": "^4.3.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
+        "laravel-mix": "^4.0.15",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
@@ -27,11 +27,17 @@
     "dependencies": {
         "@google/markerclusterer": "^1.0.3",
         "admin-lte": "^3.0.0-alpha.2",
+        "aos": "^2.3.4",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-runtime": "^6.26.0",
         "laravel-vue-pagination": "^2.3.0",
         "sweetalert2": "^7.33.1",
         "vform": "^1.0.0",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.2",
-        "vue2-google-maps": "^0.10.6"
+        "vue-scrollto": "^2.15.0",
+        "vue2-google-maps": "^0.10.6",
+        "vuetify": "^1.5.12"
     }
 }
